--- a/Drone_Problem_Debug.ipynb
+++ b/Drone_Problem_Debug.ipynb
@@ -72,6 +72,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.0, 100.0, 81.0, 99.0, 61.0, 111.0, 16.0, 76.0, 67.0, 84.0, 102.0, 0.0],\n",
+       " [100.0, 0.0, 97.0, 98.0, 41.0, 93.0, 97.0, 92.0, 48.0, 51.0, 9.0, 100.0],\n",
+       " [81.0, 97.0, 0.0, 19.0, 66.0, 36.0, 66.0, 6.0, 51.0, 47.0, 92.0, 81.0],\n",
+       " [99.0, 98.0, 19.0, 0.0, 74.0, 18.0, 84.0, 23.0, 58.0, 47.0, 92.0, 99.0],\n",
+       " [61.0, 41.0, 66.0, 74.0, 0.0, 77.0, 56.0, 61.0, 17.0, 34.0, 42.0, 61.0],\n",
+       " [111.0, 93.0, 36.0, 18.0, 77.0, 0.0, 97.0, 38.0, 60.0, 45.0, 86.0, 111.0],\n",
+       " [16.0, 97.0, 66.0, 84.0, 56.0, 97.0, 0.0, 60.0, 59.0, 73.0, 98.0, 16.0],\n",
+       " [76.0, 92.0, 6.0, 23.0, 61.0, 38.0, 60.0, 0.0, 46.0, 43.0, 88.0, 76.0],\n",
+       " [67.0, 48.0, 51.0, 58.0, 17.0, 60.0, 59.0, 46.0, 0.0, 18.0, 45.0, 67.0],\n",
+       " [84.0, 51.0, 47.0, 47.0, 34.0, 45.0, 73.0, 43.0, 18.0, 0.0, 45.0, 84.0],\n",
+       " [102.0, 9.0, 92.0, 92.0, 42.0, 86.0, 98.0, 88.0, 45.0, 45.0, 0.0, 102.0]]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distance.tolist()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -80,12 +110,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# model parameters\n",
-    "R = list(range(1, len(distance)-1)) # Nodes excluding origin & final 'dummy' node (1 to 10 index)\n",
+    "R = list(range(1, len(distance))) # Nodes excluding origin & final 'dummy' node (1 to 10 index)\n",
     "N = list(range(len(distance))) # All nodes (0 to 11 index)\n",
     "M = len(distance) + 100 # Large number\n",
     "D = list(range(3)) # Drones onboard the truck (0 to 2 index)"
@@ -93,22 +123,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 1, 2]"
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "D"
+    "R"
    ]
   },
   {
@@ -120,27 +150,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 0.10, 0.11],\n",
-       " [1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 1.10, 1.11],\n",
-       " [2.0, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 2.10, 2.11],\n",
-       " [3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 3.10, 3.11],\n",
-       " [4.0, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 4.10, 4.11],\n",
-       " [5.0, 5.1, 5.2, 5.3, 5.4, 5.5, 5.6, 5.7, 5.8, 5.9, 5.10, 5.11],\n",
-       " [6.0, 6.1, 6.2, 6.3, 6.4, 6.5, 6.6, 6.7, 6.8, 6.9, 6.10, 6.11],\n",
-       " [7.0, 7.1, 7.2, 7.3, 7.4, 7.5, 7.6, 7.7, 7.8, 7.9, 7.10, 7.11],\n",
-       " [8.0, 8.1, 8.2, 8.3, 8.4, 8.5, 8.6, 8.7, 8.8, 8.9, 8.10, 8.11],\n",
-       " [9.0, 9.1, 9.2, 9.3, 9.4, 9.5, 9.6, 9.7, 9.8, 9.9, 9.10, 9.11],\n",
-       " [10.0, 10.1, 10.2, 10.3, 10.4, 10.5, 10.6, 10.7, 10.8, 10.9, 10.10, 10.11],\n",
-       " [11.0, 11.1, 11.2, 11.3, 11.4, 11.5, 11.6, 11.7, 11.8, 11.9, 11.10, 11.11]]"
+       "[[0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 0.10],\n",
+       " [1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 1.10],\n",
+       " [2.0, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 2.10],\n",
+       " [3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 3.10],\n",
+       " [4.0, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 4.10],\n",
+       " [5.0, 5.1, 5.2, 5.3, 5.4, 5.5, 5.6, 5.7, 5.8, 5.9, 5.10],\n",
+       " [6.0, 6.1, 6.2, 6.3, 6.4, 6.5, 6.6, 6.7, 6.8, 6.9, 6.10],\n",
+       " [7.0, 7.1, 7.2, 7.3, 7.4, 7.5, 7.6, 7.7, 7.8, 7.9, 7.10],\n",
+       " [8.0, 8.1, 8.2, 8.3, 8.4, 8.5, 8.6, 8.7, 8.8, 8.9, 8.10],\n",
+       " [9.0, 9.1, 9.2, 9.3, 9.4, 9.5, 9.6, 9.7, 9.8, 9.9, 9.10],\n",
+       " [10.0, 10.1, 10.2, 10.3, 10.4, 10.5, 10.6, 10.7, 10.8, 10.9, 10.10]]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -173,11 +202,10 @@
        " [1.7.0, 1.7.1, 1.7.2],\n",
        " [1.8.0, 1.8.1, 1.8.2],\n",
        " [1.9.0, 1.9.1, 1.9.2],\n",
-       " [1.10.0, 1.10.1, 1.10.2],\n",
-       " [0.0, 0.0, 0.0]]"
+       " [1.10.0, 1.10.1, 1.10.2]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,16 +226,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[p.0, p.1, p.2, p.3, p.4, p.5, p.6, p.7, p.8, p.9, p.10, p.11]"
+       "[p.0, p.1, p.2, p.3, p.4, p.5, p.6, p.7, p.8, p.9, p.10]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,16 +250,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, w.1, w.2, w.3, w.4, w.5, w.6, w.7, w.8, w.9, w.10, 11]"
+       "[0, w.1, w.2, w.3, w.4, w.5, w.6, w.7, w.8, w.9, w.10]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +268,7 @@
     "# Launch point variable - 1 if the truck goes to node j, 0 otherwise (allows drones to be launched or not from node j)\n",
     "w = list(N)\n",
     "for i in R:\n",
-    "    w[i] = mymodel.IntVar(0, len(N), \"w.\" + str(i))\n",
+    "    w[i] = mymodel.IntVar(0, 1, \"w.\" + str(i))\n",
     "w"
    ]
   },
@@ -253,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,35 +315,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Truck variable constraints\n",
-    "truck_var = list(N)\n",
-    "for i in N:\n",
-    "    truck_var[i] = mymodel.Constraint(0, 0) # = to 0\n",
-    "    truck_var[i].SetCoefficient(truck_arc[i][i], 1) # Truck cannot go from i to i\n",
-    "    truck_var[i].SetCoefficient(truck_arc[i][0], 1) # Truck cannot go from node i to first node (origin)\n",
-    "    truck_var[i].SetCoefficient(truck_arc[len(N)-1][i], 1) # Truck cannot go from last node (origin) to any other node\n",
-    "\n",
-    "first_to_last = mymodel.Constraint(0, 0) # = to 0\n",
-    "first_to_last.SetCoefficient(truck_arc[len(N)-1][0], 1) # Truck cannot go straight from the first to the last node"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Truck variable constraints\n",
+    "#truck_var = list(N)\n",
+    "#for i in N:\n",
+    "    #truck_var[i] = mymodel.Constraint(0, 0) # = to 0\n",
+    "    #truck_var[i].SetCoefficient(truck_arc[i][i], 1) # Truck cannot go from i to i\n",
+    "    #truck_var[i].SetCoefficient(truck_arc[i][0], 1) # Truck cannot go from node i to first node (origin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Drone variable constraints\n",
-    "dimensions_2 = (int(len(N)), int(len(D))) # Create drone var dimensions - 12 x 3 (index 11 x 2)\n",
-    "drone_var = np.zeros(dimensions_2).tolist() # create nested list\n",
-    "for i in R:\n",
-    "    for k in D:\n",
-    "        drone_var[i][k] = mymodel.Constraint(0, 0) # = to 0\n",
-    "        drone_var[i][k].SetCoefficient(drone_arc[i][i][k], 1) # Drone cannot go from i to i"
+    "#dimensions_2 = (int(len(N)), int(len(D))) # Create drone var dimensions - 12 x 3 (index 11 x 2)\n",
+    "#drone_var = np.zeros(dimensions_2).tolist() # create nested list\n",
+    "#for i in R:\n",
+    "    #for k in D:\n",
+    "        #drone_var[i][k] = mymodel.Constraint(0, 0) # = to 0\n",
+    "        #drone_var[i][k].SetCoefficient(drone_arc[i][i][k], 1) # Drone cannot go from i to i"
    ]
   },
   {
@@ -327,26 +351,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# First arc\n",
-    "first_arc = mymodel.Constraint(1, 1) # = to 1\n",
-    "for i in N:\n",
-    "    first_arc.SetCoefficient(truck_arc[0][i], 1) # Truck must leave the origin and go somewhere (might be able to take out a truck var constraint or 2 if we change this to R instead of N)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Last arc\n",
-    "last_arc = mymodel.Constraint(1, 1) # = to 1\n",
-    "for i in N:\n",
-    "    last_arc.SetCoefficient(truck_arc[i][len(N)-1], 1) # Truck must come from somewhere and return to the origin"
+    "# First arc\n",
+    "#first_arc = mymodel.Constraint(1, 1) # = to 1\n",
+    "#for i in N:\n",
+    "    #first_arc.SetCoefficient(truck_arc[0][i], 1) # Truck must leave the origin and go somewhere (might be able to take out a truck var constraint or 2 if we change this to R instead of N)"
    ]
   },
   {
@@ -355,11 +367,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Last arc\n",
+    "#last_arc = mymodel.Constraint(1, 1) # = to 1\n",
+    "#for i in N:\n",
+    "    #last_arc.SetCoefficient(truck_arc[i][len(N)-1], 1) # Truck must come from somewhere and return to the origin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Truck balance - In = Out\n",
     "truck_bal = list(N)\n",
-    "for i in R:\n",
+    "for i in N:\n",
     "    truck_bal[i] = mymodel.Constraint(0, 0)\n",
-    "    for j in R:\n",
+    "    for j in N:\n",
     "        truck_bal[i].SetCoefficient(truck_arc[i][j], 1)\n",
     "        truck_bal[i].SetCoefficient(truck_arc[j][i], -1)\n",
     "        \n",
@@ -383,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,22 +471,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# position 1 = 1 (lambda for MTZ)\n",
-    "position_1 = mymodel.Constraint(1, 1)\n",
-    "position_1.SetCoefficient(pos[0], 1)\n",
+    "#position 1 = 1 (lambda for MTZ)\n",
+    "#position_1 = mymodel.Constraint(1, 1)\n",
+    "#position_1.SetCoefficient(pos[0], 1)\n",
     "\n",
-    "# position N = N (lambda for MTZ)\n",
-    "position_N = mymodel.Constraint(1, 1)\n",
-    "position_N.SetCoefficient(pos[len(N)-1], len(N))"
+    "#position N = N (lambda for MTZ)\n",
+    "#position_N = mymodel.Constraint(1, 1)\n",
+    "#position_N.SetCoefficient(pos[len(N)-1], len(N))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,174 +519,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solution Status = 2\n",
-      "Number of variables = 466\n",
-      "Number of constraints = 551\n",
+      "Solution Status = 0\n",
+      "Number of variables = 442\n",
+      "Number of constraints = 482\n",
       "Optimal Solution:\n",
-      "Optimal Value = 0.00\n",
+      "Optimal Value = 642.00\n",
       "pos[0] = 0\n",
-      "Truck 1 to 1: 0.0\n",
-      "Truck 1 to 2: 0.0\n",
-      "Truck 1 to 3: 0.0\n",
-      "Truck 1 to 4: 0.0\n",
-      "Truck 1 to 5: 0.0\n",
-      "Truck 1 to 6: 0.0\n",
-      "Truck 1 to 7: 0.0\n",
-      "Truck 1 to 8: 0.0\n",
-      "Truck 1 to 9: 0.0\n",
-      "Truck 1 to 10: 0.0\n",
-      "Truck 1 to 11: 0.0\n",
-      "Truck 1 to 12: 0.0\n",
       "pos[1] = 0\n",
-      "Truck 2 to 1: 0.0\n",
-      "Truck 2 to 2: 0.0\n",
-      "Truck 2 to 3: 0.0\n",
-      "Truck 2 to 4: 0.0\n",
-      "Truck 2 to 5: 0.0\n",
-      "Truck 2 to 6: 0.0\n",
-      "Truck 2 to 7: 0.0\n",
-      "Truck 2 to 8: 0.0\n",
-      "Truck 2 to 9: 0.0\n",
-      "Truck 2 to 10: 0.0\n",
-      "Truck 2 to 11: 0.0\n",
-      "Truck 2 to 12: 0.0\n",
       "pos[2] = 0\n",
-      "Truck 3 to 1: 0.0\n",
-      "Truck 3 to 2: 0.0\n",
-      "Truck 3 to 3: 0.0\n",
-      "Truck 3 to 4: 0.0\n",
-      "Truck 3 to 5: 0.0\n",
-      "Truck 3 to 6: 0.0\n",
-      "Truck 3 to 7: 0.0\n",
-      "Truck 3 to 8: 0.0\n",
-      "Truck 3 to 9: 0.0\n",
-      "Truck 3 to 10: 0.0\n",
-      "Truck 3 to 11: 0.0\n",
-      "Truck 3 to 12: 0.0\n",
       "pos[3] = 0\n",
-      "Truck 4 to 1: 0.0\n",
-      "Truck 4 to 2: 0.0\n",
-      "Truck 4 to 3: 0.0\n",
-      "Truck 4 to 4: 0.0\n",
-      "Truck 4 to 5: 0.0\n",
-      "Truck 4 to 6: 0.0\n",
-      "Truck 4 to 7: 0.0\n",
-      "Truck 4 to 8: 0.0\n",
-      "Truck 4 to 9: 0.0\n",
-      "Truck 4 to 10: 0.0\n",
-      "Truck 4 to 11: 0.0\n",
-      "Truck 4 to 12: 0.0\n",
       "pos[4] = 0\n",
-      "Truck 5 to 1: 0.0\n",
-      "Truck 5 to 2: 0.0\n",
-      "Truck 5 to 3: 0.0\n",
-      "Truck 5 to 4: 0.0\n",
-      "Truck 5 to 5: 0.0\n",
-      "Truck 5 to 6: 0.0\n",
-      "Truck 5 to 7: 0.0\n",
-      "Truck 5 to 8: 0.0\n",
-      "Truck 5 to 9: 0.0\n",
-      "Truck 5 to 10: 0.0\n",
-      "Truck 5 to 11: 0.0\n",
-      "Truck 5 to 12: 0.0\n",
       "pos[5] = 0\n",
-      "Truck 6 to 1: 0.0\n",
-      "Truck 6 to 2: 0.0\n",
-      "Truck 6 to 3: 0.0\n",
-      "Truck 6 to 4: 0.0\n",
-      "Truck 6 to 5: 0.0\n",
-      "Truck 6 to 6: 0.0\n",
-      "Truck 6 to 7: 0.0\n",
-      "Truck 6 to 8: 0.0\n",
-      "Truck 6 to 9: 0.0\n",
-      "Truck 6 to 10: 0.0\n",
-      "Truck 6 to 11: 0.0\n",
-      "Truck 6 to 12: 0.0\n",
       "pos[6] = 0\n",
-      "Truck 7 to 1: 0.0\n",
-      "Truck 7 to 2: 0.0\n",
-      "Truck 7 to 3: 0.0\n",
-      "Truck 7 to 4: 0.0\n",
-      "Truck 7 to 5: 0.0\n",
-      "Truck 7 to 6: 0.0\n",
-      "Truck 7 to 7: 0.0\n",
-      "Truck 7 to 8: 0.0\n",
-      "Truck 7 to 9: 0.0\n",
-      "Truck 7 to 10: 0.0\n",
-      "Truck 7 to 11: 0.0\n",
-      "Truck 7 to 12: 0.0\n",
       "pos[7] = 0\n",
-      "Truck 8 to 1: 0.0\n",
-      "Truck 8 to 2: 0.0\n",
-      "Truck 8 to 3: 0.0\n",
-      "Truck 8 to 4: 0.0\n",
-      "Truck 8 to 5: 0.0\n",
-      "Truck 8 to 6: 0.0\n",
-      "Truck 8 to 7: 0.0\n",
-      "Truck 8 to 8: 0.0\n",
-      "Truck 8 to 9: 0.0\n",
-      "Truck 8 to 10: 0.0\n",
-      "Truck 8 to 11: 0.0\n",
-      "Truck 8 to 12: 0.0\n",
       "pos[8] = 0\n",
-      "Truck 9 to 1: 0.0\n",
-      "Truck 9 to 2: 0.0\n",
-      "Truck 9 to 3: 0.0\n",
-      "Truck 9 to 4: 0.0\n",
-      "Truck 9 to 5: 0.0\n",
-      "Truck 9 to 6: 0.0\n",
-      "Truck 9 to 7: 0.0\n",
-      "Truck 9 to 8: 0.0\n",
-      "Truck 9 to 9: 0.0\n",
-      "Truck 9 to 10: 0.0\n",
-      "Truck 9 to 11: 0.0\n",
-      "Truck 9 to 12: 0.0\n",
       "pos[9] = 0\n",
-      "Truck 10 to 1: 0.0\n",
-      "Truck 10 to 2: 0.0\n",
-      "Truck 10 to 3: 0.0\n",
-      "Truck 10 to 4: 0.0\n",
-      "Truck 10 to 5: 0.0\n",
-      "Truck 10 to 6: 0.0\n",
-      "Truck 10 to 7: 0.0\n",
-      "Truck 10 to 8: 0.0\n",
-      "Truck 10 to 9: 0.0\n",
-      "Truck 10 to 10: 0.0\n",
-      "Truck 10 to 11: 0.0\n",
-      "Truck 10 to 12: 0.0\n",
       "pos[10] = 0\n",
-      "Truck 11 to 1: 0.0\n",
-      "Truck 11 to 2: 0.0\n",
-      "Truck 11 to 3: 0.0\n",
-      "Truck 11 to 4: 0.0\n",
-      "Truck 11 to 5: 0.0\n",
-      "Truck 11 to 6: 0.0\n",
-      "Truck 11 to 7: 0.0\n",
-      "Truck 11 to 8: 0.0\n",
-      "Truck 11 to 9: 0.0\n",
-      "Truck 11 to 10: 0.0\n",
-      "Truck 11 to 11: 0.0\n",
-      "Truck 11 to 12: 0.0\n",
-      "pos[11] = 0\n",
-      "Truck 12 to 1: 0.0\n",
-      "Truck 12 to 2: 0.0\n",
-      "Truck 12 to 3: 0.0\n",
-      "Truck 12 to 4: 0.0\n",
-      "Truck 12 to 5: 0.0\n",
-      "Truck 12 to 6: 0.0\n",
-      "Truck 12 to 7: 0.0\n",
-      "Truck 12 to 8: 0.0\n",
-      "Truck 12 to 9: 0.0\n",
-      "Truck 12 to 10: 0.0\n",
-      "Truck 12 to 11: 0.0\n",
-      "Truck 12 to 12: 0.0\n"
+      "Drone_3 from 2 to 11: 1.0\n",
+      "Drone_1 from 3 to 8: 1.0\n",
+      "Drone_1 from 4 to 6: 1.0\n",
+      "Drone_1 from 5 to 7: 1.0\n",
+      "Drone_1 from 6 to 4: 1.0\n",
+      "Drone_1 from 7 to 5: 1.0\n",
+      "Drone_1 from 8 to 3: 1.0\n",
+      "Drone_1 from 9 to 10: 1.0\n",
+      "Drone_1 from 10 to 9: 1.0\n",
+      "Drone_3 from 11 to 2: 1.0\n"
      ]
     }
    ],
@@ -683,7 +572,13 @@
     "for i in N:\n",
     "    print('pos[%d] = %d' % (i, pos[i].solution_value()))\n",
     "    for j in N:\n",
-    "        print('Truck ', i + 1, ' to ', j + 1, ': ', truck_arc[i][j].solution_value(), sep = '')\n",
+    "        if truck_arc[i][j].solution_value() == 1:\n",
+    "            print('Truck ', i + 1, ' to ', j + 1, ': ', truck_arc[i][j].solution_value(), sep = '')\n",
+    "for i in R:\n",
+    "    for j in R:\n",
+    "        for k in D:\n",
+    "            if drone_arc[i][j][k].solution_value() == 1:\n",
+    "                print('Drone_', k+1, ' from ', i + 1, ' to ', j + 1, ': ', drone_arc[i][j][k].solution_value(), sep = '')\n",
     "        \n",
     "#        if i == N-1 or i == j:\n",
     "#            continue\n",
@@ -693,13 +588,6 @@
     " #       else:\n",
     "  #          print('From node ', i + 1, ' to node ', j + 1, ': ', use_arc[j][i].solution_value(), sep = '') "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
